--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -36,10 +36,11 @@ html,body {
     font-size: 12px;
     line-height: 17px;
     padding: 20px 0px 5px 0px;
-    color: rgba(255,255,255,0.2);
+    color:#ffffff;
     font-weight: normal;
     text-transform: uppercase;
     letter-spacing: 0.250em;
+    
   }
   .footer .col ul {
     list-style-type: none;
@@ -103,6 +104,7 @@ html,body {
       }
       .footer .col h1 {
         font-size: 14px;
+        
       }
       .footer .col ul li {
         font-size: 13px;
