--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,8 +2,11 @@
     color: #fff;
     text-align: center;
     padding: 78px 0;
-    
+}
 
+    
+.body{
+    width: 1280px;
 }
 .text p {
     padding-top: 35px;
@@ -36,7 +39,10 @@
 .font img{
     width: 1280px;
 }
-    
+
+
+
+
 
 
 
