--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -46,87 +41,81 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
 html {
-    box-sizing: border-box;
-  }
-  *, *:before, *:after {
-    box-sizing: inherit;
-  }
-a {
-    text-decoration: none;
+  box-sizing: border-box;
 }
-.container {
-    width: 1140px;
-    margin: 0 auto;
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
+body {
+	font: 16px 'Open Sans', Arial, Helvetica, sans-serif;
+	color: #55606e;
+}
+
+a {
+	text-decoration: none;
+	transition: all 0.3s;
+}
+a:hover {
+	text-decoration: underline;
+}
+
+
+.container {
+	width: 1140px;
+	margin: 0 auto;
+}
+
+.container:after,
+.blocks:after,
+.person:after,
+.news:after {
+	content: "";
+	display: table;
+	clear: both;
+}
 
 .header,
 .footer {
-    background: #15181f url(../images/bg-texture.jpg) repeat;
-    color: #fff;
+	background: #15181f url(../images/bg-texture.jpg) repeat;
+	color: #fff;
 }
 
-.middle {
-    background: #fff;
-    height: 736px;
-}
-
-.hero {
-    background: #333 url(../images/body-top.jpg) no-repeat 50% 50%;
-    background-size: cover;
-    height: 465px;
-}
 .logo {
-    float: left;
-    margin: 19px 17px 0 0;
+	float: left;
+	margin: 19px 17px 0 0;
 }
 .slogan {
-    float: left;
-    margin-top: 22px;
-    font: italic 16px "Times New Roman", Times, Georgia, serif;
-    color: rgba(255, 255, 255, .35);
+	float: left;
+	margin-top: 22px;
+	font: italic 16px "Times New Roman", Times, Georgia, serif;
+	color: rgba(255, 255, 255, .35);
 }
+
 .nav {
-    float: right;
+	float: right;
 }
 .nav li {
-    float: left;
-    border-left: 1px solid #2c323d; /*line duong ke header*/
+	float: left;
+	border-left: 1px solid #2c323d;
 }
 .nav a {
-    display: block;
-    line-height: 62px;
-    
-}
-.container:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-.nav a {
-    color: #fff;
-    display: block;
-    line-height: 62px;
-    padding: 0 24px 0 53px;
-    position: relative; /*chinh vi tri icons*/
-}
-body {
-    font: 16px 'Open Sans', Arial, Helvetica, sans-serif;
-    color: #55606e;
-    
-}
-.nav a:hover {
-    background-color: #13151a;
-    text-decoration: none;
+	display: block;
+	line-height: 62px;
+	padding: 0 24px 0 53px;
+	color: #fff;
+	position: relative;
 }
 .nav a:after {
-    content: '';
-    background: url(../images/nav-icons.png) no-repeat;
-    position: absolute;
-    top: 22px;
-    left: 24px;
+	content: '';
+	background: url(../images/nav-icons.png) no-repeat;
+	position: absolute;
+	top: 22px;
+	left: 24px;
 }
+
 .nav .how-it-works a:after {
 	background-position: 0 -1px;
 	width: 19px;
@@ -143,122 +132,214 @@ body {
 	height: 17px;
 }
 
+.nav a:hover {
+	background-color: #13151a;
+	text-decoration: none;
+}
+
+
 .hero {
-    background: #333 url(../images/body-top.jpg) no-repeat 50% 50%;
-    background-size: cover;
-    height: 465px;
-    color: #fff;
-    text-align: center;
-    padding-top: 31px;
+	background: #333 url(../images/body-top.jpg) no-repeat 50% 50%;
+	background-size: cover;
+	height: 465px;
+	color: #fff;
+	text-align: center;
+	padding-top: 31px;
+	
 }
 
 .hero h1 {
-    font-size: 52px;
-    font-weight: bold;
-    margin: 0 0 30px;
+	font-size: 52px;
+	font-weight: bold;
+	margin: 0 0 30px;
 }
 .hero p {
-    font-size: 22px;
-    line-height: 36px;
-    font-weight: 600;
-    max-width: 715px;
-    margin: 0 auto 51px;
+	font-size: 22px;
+	line-height: 36px;
+	font-weight: 600;
+	max-width: 715px;
+	margin: 0 auto 51px;
 }
 .hero p strong {
-    font-weight: 700;
+	font-weight: 700;
 }
 
-/*dinh dang button*/
+
 .btn {
-    display: inline-block;
-    border-radius: 4px;
-    line-height: 50px;
-    color: #fff;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 50px;
-    padding: 0 55px;
-    margin: 0 11px;
+	display: inline-block;
+	border-radius: 4px;
+	line-height: 50px;
+	color: #fff;
+	font-weight: 600;
+	font-size: 18px;
+	line-height: 50px;
+	padding: 0 55px;
+	margin: 0 11px;
 }
 .btn-green {
-    background-color: #83c129;
-    box-shadow: 0 4px 0 #518719;
+	background-color: #83c129;
+	box-shadow: 0 4px 0 #518719;
 }
 .btn-blue {
-    background-color: #068fd5;
-    box-shadow: 0 4px 0 #046b9f;
+	background-color: #068fd5;
+	box-shadow: 0 4px 0 #046b9f;
 }
-/*footer*/
+.btn:hover {
+	text-decoration: none;
+	opacity: .9;
+}
 
 .footer {
-    padding: 36px 0;
-    height: 228px;
+	padding: 36px 0;
 }
 
 .footer-nav {
-    float: left;
+	float: left;
 }
 .footer-nav .column {
-    float: left;
-    width: 136px;
+	float: left;
+	width: 136px;
 }
 .footer-nav .title {
-    font-size: 12px;
-    margin-bottom: 15px;
-    font-weight: bold;
+	font-size: 12px;
+	margin-bottom: 15px;
+	font-weight: bold;
 }
 .footer-nav ul {
-    font-size: 12px;
+	font-size: 12px;
 }
 .footer-nav ul li {
-    margin-bottom: 7px;
+	margin-bottom: 7px;
 }
 .footer-nav a {
-    color: #8e959c;
-    
+	color: #8e959c;
 }
-.pefect-icons{
-    float: right;
-    padding: 0 24px 0 53px;
-    
+
+@font-face {
+    font-family: 'si';
+    src: url('../fonts/socicon.eot');
+    src: url('../fonts/socicon.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/socicon.woff') format('woff'),
+         url('../fonts/socicon.ttf') format('truetype'),
+         url('../fonts/socicon.svg#icomoonregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+ 
 }
-.pefect-icons li{
-    float: left;
-    padding-left: 25px;
-    clear:right;
-    
-    
+ 
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+    @font-face {
+        font-family:si;
+        src: url(../fonts/socicon.svg) format(svg);
+    }
+}
+
+.soc {
+	float: right;
+	overflow:hidden;
+	margin:0 0 79px; 
+	padding:0;
+	list-style:none;
+}
+
+.soc li {
+	display:inline-block;
+	*display:inline;
+	zoom:1;
+}
+
+.soc li a {
+	font-family:si!important;
+	font-style:normal;
+	font-weight:400;
+	-webkit-font-smoothing:antialiased;
+	-moz-osx-font-smoothing:grayscale;
+	-webkit-box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	-ms-box-sizing:border-box;
+	-o-box-sizing:border-box;
+	box-sizing:border-box;
+
+	-o-transition:.1s;
+	-ms-transition:.1s;
+	-moz-transition:.1s;
+	-webkit-transition:.1s;
+	transition:.1s;
+	-webkit-transition-property: transform;
+	transition-property: transform;
+	-webkit-transform: translateZ(0);
+	transform: translateZ(0);
+
+	overflow:hidden;
+	text-decoration:none;
+	text-align:center;
+	display:block;
+	position: relative;
+	z-index: 1;
+	width: 30px;
+	height: 30px;
+	line-height: 30px;
+	font-size: 20px;
+	-webkit-border-radius: 0px;
+	-moz-border-radius: 0px;
+	border-radius: 0px;
+	margin-right: 0px;
+	color: #ffffff;
+	background-color: transparent;
+}
+
+.soc li a:hover {
+	opacity: .8;
+}
+
+.soc-icon-last{
+	margin:0 !important;
+}
+
+.soc-twitter:before {
+	content:'a';
+}
+.soc-facebook:before {
+	content:'b';
+}
+.soc-vimeo:before {
+	content:'s';
 }
 
 .copyright {
-    clear: right;
-    text-align: right;
-    line-height: 20px;
-    font-size: 12px;
-    color: #8e959c;
-    padding-top: 70px;
+	clear: right;
+	text-align: right;
+	line-height: 20px;
+	font-size: 12px;
+	color: #8e959c;
 }
 .copyright a {
-    color: #8e959c;
-    margin-left: 8px;
-    
+	color: #8e959c;
+	margin-left: 8px;
 }
-/*MAIN*/
+
+
+
+.middle {
+	background: #fff;
+	padding-top: 80px;
+}
+
 .blocks {
 	margin-bottom: 75px
-    
 }
 .blocks .block {
 	float: left;
 	width: 351px;
-	margin-left: 43px;
+	margin-left: 29px;
 	padding: 15px;
 	border-radius: 4px;
 	border: 1px solid #d9dbdf;
 	position: relative;
 }
 .blocks .block:first-child {
-	margin-left: 0;
+	margin-left: 1;
+	margin-right: 1;
 }
 
 .blocks img {
@@ -310,16 +391,14 @@ body {
 	border-bottom: 2px solid #e7e7e7;
 	padding: 31px 0;
 	margin-bottom: 30px;
-    
 }
 .news .one {
 	float: left;
 	width: 352px;
 	margin-left: 42px;
-    padding-top: 150px ;
 }
 .news .one:first-child {
-	margin-left: 0;
+	margin-left: 1;
 }
 
 .news .img {
@@ -346,13 +425,14 @@ body {
 	margin: 4px 0 0;
 }
 
+
 .featured {
 	padding: 26px 0;
 	margin-bottom: 34px;
 }
 .featured * {
 	display: inline-block;
-    margin-top: 40px;
+	vertical-align: middle;
 }
 .featured ul li {
 	margin-right: 38px;
@@ -366,6 +446,56 @@ body {
 .featured a:hover {
 	opacity: 1;
 }
-body{
-    width: 1280px;
+
+
+/* Extra small devices (phones, 600px and down) */
+@media screen and (max-width: 600px) {
+
+	.logo {padding-left: 20px;}
+	.slogan{display: none;}
+	.hero{ width: 600px;}
+	.hero h1 {
+		font-size: 30px;
+		font-weight: bold;
+		margin: 0 0 30px;
+	}
+	.hero p {
+		font-size: 20px;
+		line-height: 36px;
+		font-weight: 600;
+		max-width: 715px;
+		margin: 0 auto 51px;
+	}
+	.hero p strong {
+		font-weight: 700px;
+	}
+	.blocks {
+		padding-bottom: 0;
+	}
+
+	
+	
+  }
+  @media screen and (max-width: 560px){
+	.container, .header, 
+	.hero , .middle {width: auto;}
+
+
+	.logo{display: none;}
+  }
+  @media screen and (max-width: 443px){
+	.container, .header, 
+	.hero , .middle {width: 100%;}
+	.how-it-works{display: none;}
 }
+/* Medium devices (device, 1280px and down) */
+@media screen and (max-width: 1280px) {
+	.container, .header, 
+	.hero , .middle {width: 100%;}
+}
+
+  
+ 
+  
+
+  
